
     To prefetch all objects metadata in a directory set property value to `-1`.

  5. Add configuration properties to control batching of copy operations
     separately from other operations:

       fs.gs.copy.max.requests.per.batch (default: 30)
       fs.gs.copy.batch.threads (default: 0)

  6. Fix `RejectedExecutionException` during parallel execution of GCS batch
     requests.


1.9.4 - 2018-08-07

  1. Add `fs.gs.generation.read.consistency (default : LATEST)` property to
     determine read consistency across different generations of a GCS object.

     Three modes are supported:

     `LATEST`: this is the default behavior. The connector will ignore
     generation ID of the GCS objects and always try to read the live version.

     `BEST_EFFORT`: The connector will try to read the generation determined
     when the `GoogleCloudStorageReadChannel` is first established. However if
     that generation cannot be found anymore, connector will fall back to read
     the live version. This mode allows to improve performance by requesting the
     same object generation from GCS. Using this mode connector can read
     changing objects from GCS buckets with disabled object versioning without
     failure.

     `STRICT`: The connector will always try to read the generation determined
     when the `GoogleCloudStorageReadChannel` is first established, and report
     error (`FileNotFound`) when that generation cannot be found anymore.

     Note that this property will only apply to new streams opened after
     generation is determined. It won't affect read from any streams that are
     already open, pre-fetched footer, or the metadata of the object.

  2. Support parallel execution of GCS batch requests.

     Number of threads to execute batch requests configurable via property:

       fs.gs.batch.threads (default: 0)

     If `fs.gs.batch.threads` value is set to 0 then batch requests will be
     executed sequentially by caller thread.
